product page and mobile menu done

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li class="burger-item__info burger-item__info-el2 active">
+                                            <li class="burger-item__info burger-item__info-el2">
                                                 <a class="hover-menu-title">Отделочные материалы</a>
                                                 <span class="burger-logo"></span>
                                                 <ul class="second-menu second-menu-el2">
