client fixes - task 67669

--- a/o-magazine.html
+++ b/o-magazine.html
@@ -600,13 +600,13 @@
 
                 <div class="ty-control-group">
                     <label class="ty-control-group__title" for="name_b">Ваше имя</label>
-                    <input id="name_b" size="50" class="ty-input-text-full" type="text" name="name" value="" />
+                    <input id="name_b" size="50" class="ty-input-text-full" type="text" name="name" value="" placeholder="Ваше имя *" />
                 </div>
 
                 <div class="ty-control-group">
                     <label for="phone_b" class="ty-control-group__title cm-mask-phone-label cm-required">Телефон</label>
                     <input id="phone_b" class="ty-input-text-full cm-mask-phone ty-inputmask-bdi" size="50" type="text"
-                        name="tel" value="" data-enable-custom-mask="true" />
+                        name="tel" value="" data-enable-custom-mask="true" placeholder="Телефон *" />
                 </div>
 
                 <div class="ty-control-group">
