--- a/product-page.html
+++ b/product-page.html
@@ -2273,24 +2273,25 @@
       <form method="post" class="ajax_form" id="zvon">
 
         <div class="ty-control-group">
-          <label class="ty-control-group__title" for="name_b">Ваше имя</label>
-          <input id="name_b" size="50" class="ty-input-text-full" type="text" name="name" value="" />
+          <label class="ty-control-group__title" for="name_b" hidden="">Ваше имя</label>
+          <input id="name_b" size="50" class="ty-input-text-full" type="text" name="name" value="" placeholder="Ваше имя *" />
         </div>
 
         <div class="ty-control-group">
-          <label for="phone_b" class="ty-control-group__title cm-mask-phone-label cm-required">Телефон</label>
+          <label for="phone_b" class="ty-control-group__title cm-mask-phone-label cm-required" hidden="">Телефон</label>
           <input id="phone_b" class="ty-input-text-full cm-mask-phone ty-inputmask-bdi" size="50" type="text" name="tel"
-            value="" data-enable-custom-mask="true" />
+            value="" data-enable-custom-mask="true" placeholder="Телефон *" />
         </div>
 
         <div class="ty-control-group">
-          <label for="call_data_call_request_1377_convenient_time_from" class="ty-control-group__title">Удобное
-            время</label>
+          <label for="call_data_call_request_1377_convenient_time_from"
+              class="ty-control-group__title">Удобное время</label>
           <bdi>
-            <input id="call_data_call_request_1377_convenient_time_from" class="ty-input-text cm-cr-mask-time" size="6"
-              type="text" name="time_from" value="" placeholder="09:00" /> -
-            <input id="call_data_call_request_1377_convenient_time_to" class="ty-input-text cm-cr-mask-time" size="6"
-              type="text" name="time_to" value="" placeholder="20:00" />
+              <input id="call_data_call_request_1377_convenient_time_from"
+                  class="ty-input-text cm-cr-mask-time" size="6" type="text" name="time_from" value=""
+                  placeholder="09:00" /> -
+              <input id="call_data_call_request_1377_convenient_time_to" class="ty-input-text cm-cr-mask-time"
+                  size="6" type="text" name="time_to" value="" placeholder="20:00" />
           </bdi>
         </div>
 
@@ -2298,9 +2299,6 @@
           <button class="ty-btn__primary ty-btn__big ty-btn ty-btn"
             type="submit"><span><span>Отправить</span></span></button>
         </div>
-
-
-
 
         <input type="hidden" name="af_action" value="6d50585c1b8d99af03ac3e73066991ef" />
       </form>
@@ -2322,27 +2320,28 @@
           </div>
 
           <div class="ty-control-group">
-            <label class="ty-control-group__title" for="call_data_buy_now_with_one_click_5186_name">Ваше имя</label>
-            <input id="call_data_buy_now_with_one_click_5186_name" size="50" class="ty-input-text-full" type="text"
-              name="name" value="">
+            <label class="ty-control-group__title" for="call_data_buy_now_with_one_click_5186_name" hidden="">Ваше
+              имя</label>
+            <input id="call_data_buy_now_with_one_click_5186_name" size="50" class="ty-input-text-full"
+              type="text" name="name" value="" placeholder="Ваше имя *">
           </div>
 
           <div class="ty-control-group">
             <label for="call_data_buy_now_with_one_click_5186_phone"
-              class="ty-control-group__title cm-mask-phone-label">Телефон</label>
+              class="ty-control-group__title cm-mask-phone-label" hidden="">Телефон</label>
             <input id="call_data_buy_now_with_one_click_5186_phone"
-              class="ty-input-text-full cm-mask-phone ty-inputmask-bdi js-mask-phone-inited" size="50" type="text"
-              name="tel" value="" data-enable-custom-mask="true" inputmode="numeric">
+              class="ty-input-text-full cm-mask-phone ty-inputmask-bdi js-mask-phone-inited" size="50"
+              type="text" name="tel" value="" data-enable-custom-mask="true" inputmode="numeric" placeholder="Телефон *">
           </div>
 
 
-          <div class="ty-cr-or">— или —</div>
+          <!-- <div class="ty-cr-or">— или —</div> -->
 
           <div class="ty-control-group">
             <label for="call_data_buy_now_with_one_click_5186_email"
-              class="ty-control-group__title cm-email">E-mail</label>
-            <input id="call_data_buy_now_with_one_click_5186_email" class="ty-input-text-full" size="50" type="text"
-              name="email" value="">
+              class="ty-control-group__title cm-email" hidden="">E-mail</label>
+            <input id="call_data_buy_now_with_one_click_5186_email" class="ty-input-text-full" size="50"
+              type="text" name="email" value="" placeholder="E-mail *">
           </div>
           <input type="hidden" name="ValToSend" value="Ламинат EGGER Classic Полярный дуб EPL093 31/7мм">
 
@@ -2376,14 +2375,15 @@
             </b>
           </div>
           <div class="ty-control-group">
-            <label class="ty-control-group__title" for="name_a">Ваше имя</label>
-            <input id="name_a" size="50" class="ty-input-text-full" type="text" name="name" value="" />
+            <label class="ty-control-group__title" for="name_a" hidden="">Ваше имя</label>
+            <input id="name_a" size="50" class="ty-input-text-full" type="text" name="name" value="" placeholder="Ваше имя *" />
           </div>
 
           <div class="ty-control-group">
-            <label for="phone_a" class="ty-control-group__title cm-mask-phone-label cm-required">Телефон</label>
-            <input id="phone_a" class="ty-input-text-full cm-mask-phone ty-inputmask-bdi" size="50" type="text"
-              name="tel" value="" data-enable-custom-mask="true" />
+            <label for="phone_a"
+              class="ty-control-group__title cm-mask-phone-label cm-required" hidden="">Телефон</label>
+            <input id="phone_a" class="ty-input-text-full cm-mask-phone ty-inputmask-bdi" size="50"
+              type="text" name="tel" value="" data-enable-custom-mask="true" placeholder="Телефон *" />
           </div>
 
           <div class="buttons-container">
