button for tests

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <div class="header-info__icon mobile-hidden">
-                    <a href="sales/" class="header-btn__sale">акции
+                    <a class="header-btn__sale cm-dialog-opener cm-dialog-auto-size" data-ca-target-id="modal_flash">акции
                         <div class="header-btn__sale-img"></div>
                     </a>
                     <div id="opener_call" class="callback-bt cm-dialog-opener cm-dialog-auto-size "
@@ -2159,7 +2159,7 @@
                             type="submit"><span><span>Отправить</span></span></button>
                     </div>
 
-                    <input type="hidden" name="af_action" value="fc6246de525fbb5e5f6ca1dc0f144fbf" />
+                    <input type="hidden" name="af_action" value="fc6246de525fbb5e5f6ca1dc0f144fbf" hidden="" />
                 </form>
             </div>
         </div>
@@ -2254,7 +2254,7 @@
     </script>
     <script>
         $(function () {
-            $('.ajax_form').append('<input type="text" name="org" value="" class="_org" style="visibility:hidden; height: 0; width: 0; padding: 0; border:none;"/>')
+            $('.ajax_form').append('<input type="text" name="org" value="" class="_org" style="visibility:hidden; height: 0; width: 0; padding: 0; border:none;position:absolute;"/>')
         })
     </script>
     <script>
