--- a/product-page.html
+++ b/product-page.html
@@ -2053,7 +2053,7 @@
           <div class="container-fluid-row container-fluid-row-full-width ">
             <div class="row-fluid ">
               <div class="span16 ut2-top-bottom">
-                <div class="ty-wysiwyg-content" data-ca-live-editor-object-id="0" data-ca-live-editor-object-type="">
+                <div class="ty-wysiwyg-content full" data-ca-live-editor-object-id="0" data-ca-live-editor-object-type="">
 
                   <div class="row-fluid benefits">
                     <div class="span5 benefit delivery">
