about shop done

--- a/o-magazine.html
+++ b/o-magazine.html
@@ -428,7 +428,12 @@
 <p>Свяжитесь с нами по указанным телефонам, пишите в Viber, Telegram, чат-бот. Подпишитесь в Instagram, чтобы оставаться в курсе акций и скидок.</p>
 <p><a href="https://vmetre.by/"></a></p>
 <div style="border:1px solid #D9D9D9;padding: 20px;display: inline-block;">
-<h3>Реквизиты компании</h3>
+<h3>
+    <svg width="24" height="24">
+        <use href="assets/templates/new/images/sprite.svg#documents"></use>
+    </svg>
+    Реквизиты компании
+</h3>
 <p>ИП Изотов Дмитрий Вадимович<br> УНП 193557396, зарегистрирован в торговом реестре 512199 от 11 июня 2021г, <br> свидетельство о регистрации 193557396 от 09.06.2021 Минским горисполкомом<br> Юридический адрес: Пр-т Рокоссовского 76-212, 220095, г. Минск</p>
 </div>
                                       </div>
